# E2E-Stock-Data-Pipeline

./: .flake8  .gitignore  CODEOWNERS  CONTRIBUTING.md  GETTING_STARTED.md  QUICK_START.md  README.md  REPO_ORGANIZATION.md  SECURITY.md  conftest.py  databricks.yml  environment.yml  fmp_ingestion.ipynb  pyproject.toml  pytest.ini  requirements.txt  requirements_databricks.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  ingest.yml  main-build.yml  pr-build.yml  release.yml  stock_ingestion.yml
bronze/: __init__.py  tickers.csv  utils.py
bronze/ingestion/: __init__.py  fmp.py  fmp_bronze.py  schemas.py
databricks/: DATABRICKS_SETUP.md  bronze_fundamentals_auto_loader.ipynb  bronze_prices_auto_loader.ipynb  external_location_setup.ipynb  init-script.sh
docs/: README.md  WORKFLOWS.md  databricks_setup.md  ingestion_quickstart.md
docs/ci-cd/: DEPLOYMENT_SUMMARY.md  WORKFLOW_OPTIMIZATION_SUMMARY.md
docs/operations/: OPERATOR_RUNBOOK.md  RELEASING.md  TROUBLESHOOTING.md
docs/personal/: SETUP_REQUIREMENTS.md
docs/security/: ENTERPRISE_SECURITY_SUMMARY.md
infra/: README.md
ingestion/: __init__.py  fmp_ingest.py  utils.py
notebooks/: fmp_ingestion.ipynb
silver/: __init__.py
silver/transformations/: __init__.py  clean_data.py  validity_windows.py
silver/views/: __init__.py  unified_views.py
stock_pipeline/: .gitignore  __init__.py  requirements.txt
stock_pipeline/config/: settings.py  tickers.csv
stock_pipeline/ingestion/: alpha_ingest.py  polygon_ingest.py
stock_pipeline/scripts/: archive_and_cleanup.py  fmp_dump_raw.py  ingest_fmp_prices.py  ingest_local_to_s3.py  parquet_inspection.py  polygon_ingest.py  trigger_snowflake.py
stock_pipeline/scripts/utils/: __init__.py  dates.py
tests/: test_fmp_dump_raw.py  test_fmp_ingest.py  test_ingest_local.py  test_silver_transformations.py  test_silver_views.py
validation/: README.md  __init__.py  expectations_fmp.json  expectations_prices.json
wheels/: stock_pipeline-0.1.0-py3-none-any.whl
