[build-system]
requires = [
  "setuptools>=77",      
  "wheel",
  "setuptools_scm[toml]>=8"
]
build-backend = "setuptools.build_meta"

[project]
name = "stock-pipeline"
dynamic = ["version"]
description = "E2E stock data pipeline (Bronze → Silver)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Mateo Clagg", email = "mateo.clagg@gmail.com"}]
keywords = ["etl", "data-pipeline", "databricks", "stocks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

# Only runtime deps that Databricks doesn't ship!
dependencies = [
    "requests==2.32.3",
    "python-dotenv==1.0.1",
    "aiohttp==3.12.14",
    "great-expectations==0.18.11",
    "pydantic==2.9.2"
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["bronze", "silver", "validation"]
include-package-data = true
license-files = []

[tool.setuptools.package-data]
"*" = ["*.json", "*.csv", "*.yaml", "*.yml"]

[tool.setuptools_scm]
# Dynamic versioning with setuptools_scm
local_scheme = "no-local-version"  # Clean releases only - will error on dirty tree for tagged builds
version_scheme = "guess-next-dev"
fallback_version = "0.0.0+unknown"

# Security: CRITICAL - This will cause tagged builds to FAIL on dirty trees
# This prevents accidental releases of uncommitted code
git_describe_command = "git describe --dirty --tags --long --match 'v[[:digit:]]*'"
