[build-system]
requires = [
  "setuptools>=77",      
  "wheel",
  "setuptools_scm[toml]>=8"
]
build-backend = "setuptools.build_meta"

[project]
name = "stock-pipeline"
dynamic = ["version"]
description = "Cost-optimized stock data ingestion pipeline - Local async FMP API → S3 Parquet"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Mateo Clagg", email = "mateo.clagg@gmail.com"}]
keywords = ["etl", "data-pipeline", "stocks", "fmp", "s3", "parquet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

# Core dependencies for local ingestion
dependencies = [
    # API and HTTP
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",

    # Data processing
    "polars>=0.20.0",
    "pyarrow>=15.0.0",

    # AWS S3
    "boto3>=1.34.0",

    # Retry logic
    "tenacity>=8.2.0",

    # Trading calendar
    "pandas>=2.0.0",
    "pandas-market-calendars>=4.3.0",

    # Data quality validation
    "great-expectations>=0.18.0",
]

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true
license-files = []

[tool.setuptools.packages.find]
where = ["."]
include = ["stock_pipeline*", "validation*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.csv", "*.yaml", "*.yml"]

[tool.setuptools_scm]
# Dynamic versioning with setuptools_scm
local_scheme = "no-local-version"  # Clean releases only - will error on dirty tree for tagged builds
version_scheme = "guess-next-dev"
fallback_version = "0.0.0+unknown"

# Security: CRITICAL - This will cause tagged builds to FAIL on dirty trees
# This prevents accidental releases of uncommitted code
git_describe_command = "git describe --dirty --tags --long --match 'v[[:digit:]]*'"
